--- a/src/app/components/ToDoItem/ToDoItem.css
+++ b/src/app/components/ToDoItem/ToDoItem.css
@@ -9,7 +9,7 @@
   border: none;
   padding: 0;
   outline: none;
-  width: 100%;
+  width: 320px;
   min-width: 0;
   word-break: break-word;
   white-space: pre-wrap;
