--- a/src/app/components/NewToDoInput/NewToDoInput.css
+++ b/src/app/components/NewToDoInput/NewToDoInput.css
@@ -8,10 +8,14 @@
 
 .todo-input {
   height: inherit;
-  border: none;
+  width: 320px !important;
   padding: 0;
   outline: none;
   width: 100%;
+}
+
+.add-button-wrapper {
+  display: inline-block;
 }
 
 .add-button {
@@ -21,4 +25,11 @@
   width: 20px;
   height: 20px;
   float: start;
+  transition: all 0.2s;
+}
+
+.add-button.disabled {
+  border-color: #666;
+  cursor: not-allowed;
+  opacity: 0.5;
 }
